cours/service-networking/ingress/ingress-resource/Ingress-wear-watch-domain-based.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-wear-watcg
spec:
  rules:
    # The host field in each rule matches the specified value with the domain name used in the request URL
    # and routes traffic to the appropriate backend
    - host: wear.my-online-store.com
      http:
        paths:
          backend:
            serviceName: wear-service
            servicePort: 80
    - host: watch.my-online-store.com
      http:
        paths:
          backend:
            serviceName: watch-service
            servicePort: 80
